syntax = "proto3";
package Sample;

import "google/protobuf/timestamp.proto";

service AddressesService {
  rpc GetAddressBook(EmptyRequest) returns (AddressBook);
}

message Person {
  int32 id = 1;
  string name = 2;
  string email = 3;

  enum PhoneType {
    PHONE_TYPE_UNSPECIFIED = 0;
    PHONE_TYPE_MOBILE = 1;
    PHONE_TYPE_HOME = 2;
    PHONE_TYPE_WORK = 3;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
  google.protobuf.Timestamp last_updated = 5;
}

message AddressBook {
  repeated Person people = 1;
}

message EmptyRequest {
  
}